RESOLVED FIXED232999
Fix for thread deadlocks during layout tests in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=232999
Summary Fix for thread deadlocks during layout tests in isolated tree mode.
Andres Gonzalez
Reported 2021-11-11 08:39:09 PST
Isolated tree mode: Fix for WTR::AccessibilityUIElement calls into the AX API on the AX thread that must hit the main thread.
Attachments
Patch (3.78 KB, patch)
2021-11-11 09:05 PST, Andres Gonzalez
ews-feeder: commit-queue-
Patch (3.87 KB, patch)
2021-11-11 09:17 PST, Andres Gonzalez
no flags
Patch (4.53 KB, patch)
2021-11-11 12:32 PST, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2021-11-11 08:39:22 PST
Andres Gonzalez
Comment 2 2021-11-11 09:05:36 PST
Andres Gonzalez
Comment 3 2021-11-11 09:17:37 PST
chris fleizach
Comment 4 2021-11-11 10:14:48 PST
Comment on attachment 443957 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=443957&action=review > Tools/ChangeLog:10 > + dispatched to a secndary, mocked thread created by the secondary > Tools/WebKitTestRunner/InjectedBundle/AccessibilityController.cpp:116 > + spinMainRunLoop(); we'll need to keep spending the run loop while we wait. this also means we don't need this semaphore. we could put a bool in AXThread::dispatch that marks complete and then do a while ( !complete ) { spinMainRunLoop(); }
Andres Gonzalez
Comment 5 2021-11-11 12:32:20 PST
Andres Gonzalez
Comment 6 2021-11-11 12:37:41 PST
(In reply to chris fleizach from comment #4) > Comment on attachment 443957 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=443957&action=review > > > Tools/ChangeLog:10 > > + dispatched to a secndary, mocked thread created by the > > secondary Fixed. > > > Tools/WebKitTestRunner/InjectedBundle/AccessibilityController.cpp:116 > > + spinMainRunLoop(); > > we'll need to keep spending the run loop while we wait. > this also means we don't need this semaphore. we could put a bool in > AXThread::dispatch that marks complete and then do a > > while ( !complete ) { > spinMainRunLoop(); > } Thanks! so much simpler and works.
EWS
Comment 7 2021-11-11 14:46:39 PST
Committed r285671 (244158@main): <https://commits.webkit.org/244158@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443988 [details].
Note You need to log in before you can comment on or make changes to this bug.