Tools/WebKitTestRunner/InjectedBundle/AccessibilityController.cpp
@@ -104,12 +104,18 @@ void AccessibilityController::executeOnAXThreadAndWait(Function<void()>&& functi
 {
 #if ENABLE(ACCESSIBILITY_ISOLATED_TREE)
     if (m_useMockAXThread) {
-        AXThread::dispatch([&function, this] {
+        bool complete = false;
+        AXThread::dispatch([&function, &complete] {
             function();
-            m_semaphore.signal();
+            complete = true;
         });
 
-        m_semaphore.wait();
+        // Spin the main run loop so that any required DOM processing can be
+        // executed in the main thread. That is the case of most parameterized
+        // attributes, where the attribute value has to be calculated back in
+        // the main thread.
+        while (!complete)
+            spinMainRunLoop();
     } else
 #endif
         function();
@@ -138,6 +144,15 @@ void AccessibilityController::executeOnMainThread(Function<void()>&& function)
         function();
     });
 }
+
+#if ENABLE(ACCESSIBILITY_ISOLATED_TREE)
+void AccessibilityController::spinMainRunLoop() const
+{
+    ASSERT(isMainThread());
+    CFRunLoopRunInMode(kCFRunLoopDefaultMode, .01, false);
+}
+#endif // ENABLE(ACCESSIBILITY_ISOLATED_TREE)
+
 #endif // PLATFORM(COCOA)
 
 RefPtr<AccessibilityUIElement> AccessibilityController::elementAtPoint(int x, int y)
